# experimental-data-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
Balmer_series/: refraction_angle_mercury_lamp.py
specific_charge_and_milikan_drop/: e_m_e_for_longi.py  e_m_e_trans.py  longitudinal_and_transverse_magnetic_field.py  q_vs_r_ratio_milikan_oil_drop.py
