[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "Experimenta Physics"
description = "Analysis of experimental physics"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Wasiful Alam", email = "wasiful2016@email.com" },
]
maintainers = [
  { name = "Wasiful Alam", email = "wasiful2016@email.com" },
]
requires-python = ">=3.8"

dependencies = [
  "typing_extensions",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

# [project.urls]
# Homepage = "https://github.com/organization/package"
# Documentation = "https://package.readthedocs.io/"
# "Bug Tracker" = "https://github.com/organization/package/issues"
# Discussions = "https://github.com/organization/package/discussions"
# Changelog = "https://package.readthedocs.io/en/latest/changelog.html"
